# nullwatch-python-sdk

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  live_demo.py  rag_pipeline.py  test_ollama.py
nullwatch/: __init__.py  cli.py  client.py  models.py  testing.py
nullwatch/scorers/: __init__.py  base.py  rag_hallucination.py  tool_call.py  tool_call_grounding.py
tests/: test_client.py  test_grounding_scorer.py  test_integration.py  test_models.py  test_new_features.py  test_rag_hallucination_scorer.py  test_scorers.py
