[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullwatch-py"
version = "0.1.0"
description = "Python SDK for nullwatch — observability and hallucination detection for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "WB Hackathon Team" }]
requires-python = ">=3.10"
keywords = ["nullwatch", "nullclaw", "observability", "AI agents", "hallucination detection", "RAG"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core SDK has zero required dependencies (uses stdlib only)
dependencies = []

[project.optional-dependencies]
rag = [
    "lettucedetect>=0.1.8",
    "torch>=2.0",
    "transformers>=4.38",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
all = [
    "nullwatch-py[rag,dev]",
]

[project.urls]
Homepage = "https://github.com/nullclaw/nullwatch-python-sdk"
Repository = "https://github.com/nullclaw/nullwatch-python-sdk"
"Bug Tracker" = "https://github.com/nullclaw/nullwatch-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nullwatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nullwatch"]
omit = ["tests/*", "examples/*"]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I"]
