[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullwatch-py"
version = "0.1.1"
description = "Python SDK for nullwatch — observability and hallucination detection for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Viroslav", email = "nikolayivanov1999@gmail.com" },
    { name = "Koldim2001", email = "koldim2001@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["nullwatch", "nullclaw", "observability", "AI agents", "hallucination detection", "RAG"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core SDK has zero required dependencies (uses stdlib only)
dependencies = []

[project.optional-dependencies]
rag = [
    "lettucedetect>=0.1.8",
    "torch>=2.0",
    "transformers>=4.38",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "twine>=5.0",
]
all = [
    "lettucedetect>=0.1.8",
    "torch>=2.0",
    "transformers>=4.38",
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "twine>=5.0",
]

[project.scripts]
nullwatch-py = "nullwatch.cli:main"

[project.urls]
Homepage = "https://github.com/nullclaw/nullwatch-python-sdk"
Repository = "https://github.com/nullclaw/nullwatch-python-sdk"
"Bug Tracker" = "https://github.com/nullclaw/nullwatch-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nullwatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nullwatch"]
omit = ["tests/*", "examples/*"]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I"]
